# python-testing

./: .editorconfig  .gitignore  README.md  dagger.json  pyproject.toml  run_tests
.dagger/: pyproject.toml
.dagger/sdk/src/dagger/client/: gen.py
.dagger/src/python_testing/: __init__.py  main.py
.github/workflows/: tests-dagger-uv.yml  tests-pdm-uv.yml  tests-pdm.yml  tests-uv.yml  tests.yml
src/customers/: __init__.py  customer.py
src/testables/: my_class.py
tests/: test_containers.py  test_fixtures.py  test_monkeypatches.py  test_pytest_fixture_function_scoped.py  test_pytest_fixture_session_scoped.py
