[project]
name = "tests"
version = "0.0.0"
description = "Python tests exploration"
authors = [
    {name = "diego", email = "diegoariel83@gmail.com"},
]
requires-python = "==3.13.*"
readme = "README.md"
dependencies = [
    "psycopg-binary>=3.2.3", #TODO make it optional, and add it when dagger runs
    "psycopg>=3.2.3",
]

[tool.pdm]
distribution = false

# does uv support this?
[tool.pdm.scripts]
tests = "pdm run pytest" # uv sync --all-extra ; uv run pytest
lint = "pdm run ruff check ." # uv run mypy .

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "testcontainers>=4.8.2",
    "typing-extensions>=4.12.2",
    "coverage>=7.6.7",
    "pytest-cov>=6.0.0",
]
lint = [
    "ruff>=0.7.4",
]
#TODO??
#test = [
#]
